[gd_scene load_steps=12 format=3 uid="uid://b1xgqwhsvt638"]

[ext_resource type="Script" path="res://Scripts/UI/pause_menu.gd" id="1_7in0l"]
[ext_resource type="PackedScene" uid="uid://dnxmef5rt333h" path="res://Prefabs/UI/audio_sliders.tscn" id="2_c1tve"]
[ext_resource type="Shader" path="res://Assets/Shaders/blur.gdshader" id="2_itsfm"]
[ext_resource type="Theme" uid="uid://guaqrfny00d3" path="res://Assets/Themes/ui_theme.tres" id="3_0s7a3"]
[ext_resource type="FontFile" uid="uid://8wu6ev8gqxw7" path="res://Assets/Fonts/RubikBubbles-Regular.ttf" id="3_3yawt"]
[ext_resource type="PackedScene" uid="uid://7n2ofqo0tfhx" path="res://Prefabs/UI/extras_bar.tscn" id="3_ip2hj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_porp7"]
shader = ExtResource("2_itsfm")
shader_parameter/lod = 0.0

[sub_resource type="Theme" id="Theme_4vk2j"]
Button/font_sizes/font_size = 32

[sub_resource type="Animation" id="Animation_y4uvu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BlurBackground:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_oqotb"]
resource_name = "enter"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BlurBackground:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 2.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1qac0"]
_data = {
"RESET": SubResource("Animation_y4uvu"),
"enter": SubResource("Animation_oqotb")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7in0l")

[node name="BlurBackground" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_porp7")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="MarginContainer" type="MarginContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = SubResource("Theme_4vk2j")
theme_override_constants/margin_left = 512
theme_override_constants/margin_top = 128
theme_override_constants/margin_right = 512
theme_override_constants/margin_bottom = 128

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("3_0s7a3")
theme_override_constants/separation = 32

[node name="PausedLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.352941, 0.74902, 0.172549, 1)
theme_override_constants/shadow_outline_size = 65
theme_override_fonts/font = ExtResource("3_3yawt")
theme_override_font_sizes/font_size = 128
text = "Paused"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Resume"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Options"

[node name="AudioSliders" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_c1tve")]
layout_mode = 2

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Quit to Menu"

[node name="ExtrasBar" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_ip2hj")]
layout_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1qac0")
}
autoplay = "RESET"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
